# python-project-template

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
